Testing Netlify build command

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="qr-assets/css/post.css">
   </head>
   <body>
+    <p>test</p>
     <!--Prism-->
     <div id="root"></div>
   </body>
